--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
 {% block conteudo %}
-<a href="/aula/Pedro">Aula</a>
     <h1>
-        Estou no index!!
+        Seja Bem Vindo!!
     </h1>
-    <img src="{{url_for('static', filename='img/download.jpeg')}}" alt="Cachorro">
+
+    <div>
+    <img src="{{url_for('static', filename='img/Gato_pipoca.gif')}}" alt="Gato">
+    </div>
 {% endblock %}
