--- a/templates/filme_add.html
+++ b/templates/filme_add.html
@@ -14,8 +14,8 @@
         <input type="text" name="titulo" id="titulo">
         <label for="diretor">diretor: </label>
         <input type="text" name="diretor" id="diretor">
-        <label for="ano">ano_lancamento: </label>
-        <input type="number" name="ano" id="ano">
+        <label for="ano_lancamento">ano_lancamento: </label>
+        <input type="number" name="ano_lancamento" id="ano_lancamento">
         <button type="submit">Salvar</button>
     </form>
 {% endblock %}
