--- a/templates/filme_edita.html
+++ b/templates/filme_edita.html
@@ -2,21 +2,23 @@
 
 {% block conteudo %}
     {% set mensagens = get_flashed_messages()%}
+    <form action="/filme/editasave" method="post">
+        <fieldset>
+            <input type="hidden" name="id", value="{{dados.id_filme}}">
+            <label for="titulo">Titulo: </label>
+            <input type="text" name="titulo" id="titulo", value="{{dados.titulo}}">
+            <label for="text">Diretor: </label>
+            <input type="diretor" name="diretor" id="diretor", value="{{dados.diretor}}">
+            <label for="ano_lancamento">ano_lancamento: </label>
+            <input type="number" name="ano_lancamento" id="ano_lancamento", value="{{dados.ano_lancamento}}">
+            <button type="submit">Salvar</button>
+        </fieldset>
+    </form>
     {% if mensagens%}
         {% for msg in mensagens%}
-        <div class="message">
-            {{msg}}
-        </div>
+            <div class="message">
+                {{msg}}
+            </div>
         {% endfor %}
     {% endif %}
-    <form action="/filme/editasave" method="post">
-        <input type="hidden" name="id", value="{{dados.id_filme}}">
-        <label for="titulo">Titulo: </label>
-        <input type="text" name="titulo" id="titulo", value="{{dados.titulo}}">
-        <label for="text">Diretor: </label>
-        <input type="diretor" name="diretor" id="diretor", value="{{dados.diretor}}">
-        <label for="ano_lancamento">ano_lancamento: </label>
-        <input type="number" name="ano_lancamento" id="ano_lancamento", value="{{dados.ano_lancamento}}">
-        <button type="submit">Salvar</button>
-    </form>
 {% endblock %}
