--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
     </h1>
 
     <div>
-    <img src="{{url_for('static', filename='img/Gato_pipoca.gif')}}" alt="Gato">
+    <img src="{{url_for('static', filename='img/Gato_pipoca.gif')}}" alt="Gato" class="gatinho">
     </div>
 {% endblock %}
