--- a/templates/filme_add.html
+++ b/templates/filme_add.html
@@ -4,7 +4,7 @@
     {% set mensagens = get_flashed_messages()%}
 
     <form action="/filme/save" method="post">
-        <fieldset>
+        <fieldset class="adicionar">
             <div>
                 <label for="titulo">titulo: </label>
                 <input type="text" name="titulo" id="titulo">
