--- a/templates/filme_edita.html
+++ b/templates/filme_edita.html
@@ -3,15 +3,23 @@
 {% block conteudo %}
     {% set mensagens = get_flashed_messages()%}
     <form action="/filme/editasave" method="post">
-        <fieldset>
-            <input type="hidden" name="id", value="{{dados.id_filme}}">
-            <label for="titulo">Titulo: </label>
-            <input type="text" name="titulo" id="titulo", value="{{dados.titulo}}">
-            <label for="text">Diretor: </label>
-            <input type="diretor" name="diretor" id="diretor", value="{{dados.diretor}}">
-            <label for="ano_lancamento">ano_lancamento: </label>
-            <input type="number" name="ano_lancamento" id="ano_lancamento", value="{{dados.ano_lancamento}}">
-            <button type="submit">Salvar</button>
+        <fieldset class="edita">
+            <input type="hidden" name="id_filme", value="{{dados.id_filme}}">
+            <div>
+                <label for="titulo">Titulo: </label>
+                <input type="text" name="titulo" id="titulo", value="{{dados.titulo}}">
+            </div>
+            <div>
+                <label for="text">Diretor: </label>
+                <input type="diretor" name="diretor" id="diretor", value="{{dados.diretor}}">
+            </div>
+            <div>
+                <label for="ano_lancamento">ano_lancamento: </label>
+                <input type="number" name="ano_lancamento" id="ano_lancamento", value="{{dados.ano_lancamento}}">
+            </div>
+            <div>
+                <button type="submit">Salvar</button>
+            </div>
         </fieldset>
     </form>
     {% if mensagens%}
