--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <p>CRUD DO LELO</p>
+        <p>CRUD DO PEDRO LILÓ</p>
     </header>
     <nav>
         <a href="/">Home</a>
